--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Beers</title>
-	<script src="/lesson-task/data.js"></script>
-	<script src="/lesson-task/script.js"></script>
+	<script src="/public/data.js"></script>
+	<script src="/public/script.js"></script>
 </head>
 
 <body>
